Write range recursion method

--- a/css-friends-03/skeleton/css/03-layout.css
+++ b/css-friends-03/skeleton/css/03-layout.css
@@ -18,7 +18,7 @@
 .content-main {
   position: absolute;
   right: 111px;
-  top: -10.5px;
+  top: px;
   min-height: 200px;
   background: pink;
   display: inline-block;
